@@ -105,7 +105,7 @@ module Selenium
           chrome_options['binary']                   = Chrome.path if Chrome.path
           chrome_options['nativeEvents']             = true if native_events
           chrome_options['verbose']                  = true if verbose
-          chrome_options['detach']                   = detach != false
+          chrome_options['detach']                   = true if detach
           chrome_options['noWebsiteTestingDefaults'] = true if no_website_testing_defaults
           chrome_options['prefs']                    = prefs if prefs
 
